[gd_scene load_steps=51 format=2]

[ext_resource path="res://enemy/armadillo/armadillo_idle.png" type="Texture" id=1]
[ext_resource path="res://enemy/armadillo/armadillo_run.png" type="Texture" id=2]
[ext_resource path="res://enemy/armadillo/armadillo_gun.png" type="Texture" id=3]
[ext_resource path="res://enemy/armadillo/armadillo_hurt.png" type="Texture" id=4]
[ext_resource path="res://enemy/enemy.gd" type="Script" id=5]
[ext_resource path="res://enemy/armadillo/armadillo_death.png" type="Texture" id=6]
[ext_resource path="res://enemy/armadillo/armadillo_shadow.png" type="Texture" id=7]
[ext_resource path="res://enemy/armadillo/armadillo_death.wav" type="AudioStream" id=8]
[ext_resource path="res://enemy/armadillo/fire.wav" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 70, 28 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 70, 0, 70, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 140, 0, 70, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 210, 0, 70, 28 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 70, 28 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 26, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 78, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 26, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 78, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 104, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 130, 0, 26, 28 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 60, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 120, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 180, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 360, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 420, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 480, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 540, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 660, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 720, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 780, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 840, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 960, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 1020, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 1080, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 1140, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 6 )
region = Rect2( 1200, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 6 )
region = Rect2( 1260, 0, 60, 40 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 50, 28 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 7.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "death",
"speed": 12.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 8, 8 )

[node name="armadillo" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )
GUN_FLASH_EFFECT_PATH = "res://enemy/armadillo/armadillo_gun_flash_effect.tscn"
treasure_bomb_frame = 18

[node name="shadow" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="gun_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "idle"
playing = true

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 18 )
animation = "idle"

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 19 )

[node name="shoot_timer" type="Timer" parent="."]
one_shot = true

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.699

[node name="fire_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
